# flight

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  README.md  RESEARCH.md  flight-prd.md  package-lock.json  package.json  plan.md  tsconfig.test.json  tsup.config.ts
.claude/commands/: flight-log.md
.github/workflows/: ci.yml  release.yml
bench/: throughput.ts
docs/: CHANGELOG.md  flight-prd.md  plan.md
docs/superpowers/plans/: 2026-03-11-flight-v1-features.md
docs/superpowers/specs/: 2026-03-11-flight-v1-features-design.md  (+1 more)
sdk/python/: pyproject.toml
sdk/python/flight_sdk/: __init__.py  client.py  types.py
sdk/python/tests/: test_client.py
src/: art.ts  cli.ts  collector.ts  export.ts  file-lock.ts  hooks.ts  index.ts  init.ts  json-rpc.ts  lifecycle.ts  log-commands.ts  logger.ts  pd-schema.ts  progressive-disclosure.ts  proxy.ts  replay.ts  retry.ts  sdk.ts  setup.ts  shared.ts  stats.ts  summary.ts
test/: alerts.test.ts  benchmark.test.ts  collector.test.ts  disk-full.test.ts  export.test.ts  fuzz.test.ts  hooks.test.ts  init.test.ts  integration.test.ts  intersection.test.ts  json-rpc.test.ts  lifecycle.test.ts  log-commands.test.ts  logger.test.ts  loop-detection.test.ts  mock-mcp-server.ts  pd-token-reduction.test.ts  progressive-disclosure.test.ts  redaction.test.ts  replay.test.ts  sdk.test.ts  setup.test.ts  stats.test.ts  summary.test.ts
test/simulate/: mock-fs-server.ts  mock-git-server.ts  mock-web-server.ts  runner.ts  scenarios.ts  stress.ts  types.ts  validate-claude-api.ts  validate-pd.ts
